<resources>
    <string name="app_name">Home Busness</string>
    <string name="phone_restriction">Please enter your correct phone number to send the activation code via SMS</string>
    <string name="name">Username</string>
    <string name="phone_num">Phone Number</string>
    <string name="city">Region</string>
    <string name="region">City</string>
    <string name="login">Login</string>
    <string name="singin">Sign in</string>
    <string name="skip"><u>Skip</u></string>
    <string name="empty_felid">Fill in this field</string>
    <string name="phone_nums">Mobile number must contain 8 digits</string>
    <string name="code_hint">Enter the 5-digit activation code</string>
    <string name="verify">Activate</string>
    <string name="resend_code"><u>Resend the code</u></string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="bag">Bag</string>
    <string name="search_hint">Find what you need</string>
    <string name="all">All</string>
    <string name="new_meals">Latest Products</string>
    <string name="new_stores">Latest Stores</string>
    <string name="spacial_meals">Best Offers</string>
    <string name="spacial_stores">Special Stores</string>
    <string name="lowest_price">Minimum order :</string>
    <string name="rating">Rating :</string>
    <string name="stores">Stores</string>
    <string name="myStore">Store</string>
    <string name="editStore">Edit Store</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="information_card">Information About Payment Via Link</string>
    <string name="address">Saved Addresses</string>
    <string name="my_order">My Orders</string>
    <string name="profile">Profile</string>
    <string name="question">Common Questions</string>
    <string name="user_privecey">Terms of use</string>
    <string name="upgrade">Upgrade Account To Store</string>
    <string name="setting">Settings</string>
    <string name="signOut">Sign Out</string>
    <string name="lang_app">App Language</string>
    <string name="notification">Push Notifications</string>
    <string name="pick_lang">Pick Language</string>
    <string name="save">Save</string>
    <string name="addAddress">Add Address</string>
    <string name="noAddress">There is no previous address</string>
    <string name="editAddress">Edit Address</string>
    <string name="delete">Delete</string>
    <string name="piece">Piece</string>
    <string name="avenue">Avenue</string>
    <string name="street">Street</string>
    <string name="place">Home or Building</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="pick_error">Pick the address location</string>
    <string name="quest">Questions</string>
    <string name="contect_us">Call Us</string>
    <string name="ok">Ok</string>
    <string name="somthing_wrong">Something wrong happened!</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="attention">Attention</string>
    <string name="wrong_code">Wrong Code!!</string>
    <string name="resend_messsage">A new activation code has been sent back to your phone number</string>
    <string name="time_out">You have exceeded the limit for re-sending the activation code. Try again in another day</string>
    <string name="loading_data">Loading Data…</string>
    <string name="update">There is a new update in the store, update please</string>
    <string name="edit">Sorry, the application is closed for maintenance</string>
    <string name="updated">تحديث</string>
    <string name="description_store">description Store</string>
    <string name="type">There is no data of this type</string>
    <string name="send_message">Send Message to Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="call_reason">call reason</string>
    <string name="write_here">Write here</string>
    <string name="send_msg">Send Now</string>
    <string name="add_photo">Add photo</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Category</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_description">Product Description</string>
    <string name="add_new_product">Add new Product</string>
    <string name="my_product">My Product</string>
    <string name="bill">Bill</string>
    <string name="bill_date">"Invoice date: "</string>
    <string name="bill_number">bill number :</string>
    <string name="client_name">"customer name : "</string>
    <string name="seller_name">seller name :</string>
    <string name="client_address">address :</string>
    <string name="seller_code">"seller Code: "</string>
    <string name="payment">payment :</string>
    <string name="bill_total">total :</string>
    <string name="delivry">delivry :</string>
    <string name="discount">discount :</string>
    <string name="n">n</string>
    <string name="product">product</string>
    <string name="checkout_quantity">Quantity</string>
    <string name="unit_price">unit price</string>
    <string name="price">price</string>
    <string name="send_link_what">send link via whatsapp</string>
    <string name="order_status">order status</string>
    <string name="add_to_cart">add to cart</string>
    <string name="best">best</string>
    <string name="list">List</string>
    <string name="most_wanted">Most Wanted</string>
    <string name="ratings">Ratings</string>
    <string name="minOrder">Minimum order is %d KD</string>
    <string name="mask">Mask</string>
    <string name="ball">Ball</string>
    <string name="share">Share</string>
    <string name="add_cart">Add Cart</string>
    <string name="dk">KWD</string>
    <string name="contact">Contact the store</string>
    <string name="whatsApp">Send WhatsApp</string>
    <string name="SendingaMessage">Sending a Message</string>
    <string name="managementMessaging">Application management messaging</string>
    <string name="message">The application you do not have</string>
    <string name="errorMessage">This field is required</string>
    <string name="sendMessage">Message sent successfully</string>
    <string name="addedFavorites">Added to favorites</string>
    <string name="addedCart">Added to Cart</string>
    <string name="alreadyAdded">Already added</string>
    <string name="start_add_item">Start adding items</string>
    <string name="empty_cart_2">Fill it up with our list of delicious goodies and enjoy a great meal</string>
    <string name="empty_cart">Your basket is empty</string>
    <string name="cart">Cart</string>
    <string name="fav">Favorite</string>
    <string name="add_fav">Collect the items you love</string>
    <string name="add_fav_2">Favorite the items you like to save from themا</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="location_address">home address</string>
    <string name="email">E-mail</string>
    <string name="edite_address">Edit the address</string>
    <string name="governorate">Governorate</string>
    <string name="start_order">Start ordering now</string>
    <string name="start_order_2">See through our list and order everything you desire!</string>
    <string name="condition">Condition</string>
    <string-array name="language">
        <item>Arabic</item>
        <item>Englsih</item>
    </string-array>
    <string name="name_store">Store name</string>
    <string name="dec_store">Store description</string>
    <string name="select_cate">Select section</string>
    <string name="cate_one">The main section</string>
    <string name="cate2">section One</string>
    <string name="cate3">section Two</string>
    <string name="far_places">Remote areas</string>
    <string name="name_governorate">The name of the province</string>
    <string name="subscribe_in_delivry">Subscribe to the delivery service</string>
    <string name="recive_order">Receive requests</string>
    <string name="hours_work">Store opening hours</string>
    <string name="send_whatsapp">Receive WhatsApp inquiries</string>
    <string name="call_to_know">Receive inquiries contact</string>
    <string name="delivery_day">Processing time</string>
    <string name="min_price">Minimum</string>
    <string name="store_location">Store location (location)</string>
    <string name="product_management">Save</string>
    <string name="order_summery">Order Summary</string>
    <string name="total_cost">total Cost</string>
    <string name="add_note">Add notes to order</string>
    <string name="complete_order">Complete  Order</string>
    <string name="add_product_to_cart">Add product</string>
    <string name="Subtotal">Subtotal :</string>
    <string name="payment_method">Payement Method</string>
    <string name="add">Add</string>
    <string name="total">Total :</string>
    <string name="discount_coupon">Discount Coupon</string>
    <string name="thanks">Thanks for your request</string>
    <string name="thank_for_order">Thank you for your request and very soon you will receive it</string>
    <string name="order_details">Order Details</string>
    <string name="my_address">Address</string>
    <string name="order_details2">Order Details</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="complete">completed</string>
    <string name="back_to_home">Back to Home</string>
    <string name="confirm_address">are you shure that you want to use this address ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addRate">Add your Rating</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="errorTime">The opening and closing time is wrong</string>
    <string name="errorRegion">At least one Region must be added</string>
    <string name="errorGovernorate">At least one Governorate must be added</string>
    <string name="addPhotoStore">Add a picture to the store</string>
    <string name="done">Done</string>
    <string name="request">Your request has been sent to the administration</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Un Follow</string>
    <string name="search">Search</string>
    <string name="searchResult">There are no search results</string>
    <string name="emptyStore">There are no meals in this store</string>
    <string name="buyStore">You cannot add products from more than one store in the cart. Do you want to remove the contents of the current cart and add new ones?</string>
    <string name="go_cart">Go To The Cart</string>
    <string name="paymentCart">Your payment was successful</string>
    <string name="pleasetryagain">Please turn on GPS</string>
    <string name="tryagain">Try again</string>
    <string name="updateProfileSuccessfuly">Update Profile Successfuly</string>
    <string name="codeUnavailable">Promo Code is finish</string>
    <string name="add_product">Add Product</string>
    <string name="add_location_success">Adding Location Done Successfully</string>
    <string name="no_select">Select Section Please !!</string>

    <string-array name="YN">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="OC">
        <item>Close</item>
        <item>Open</item>
    </string-array>
    <string name="my_message">My Messages</string>
</resources>