<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:iconTint="@android:color/black"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/ball"
        android:icon="@drawable/ic_bell"
        android:title="@string/ball"
        android:iconTint="@android:color/black"
        app:showAsAction="always"
        tools:targetApi="o" />
    <item
        android:id="@+id/mask"
        android:icon="@drawable/ic_mask"
        android:title="@string/mask"
        android:iconTint="@android:color/black"
        app:showAsAction="always"
        tools:targetApi="o" />
</menu>