<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/imgLoginLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo_light_no_bg"
            app:layout_constraintBottom_toTopOf="@+id/tvInstrction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstrction"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/app_font"
            android:text="@string/phone_restriction"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/llLoginForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginLog" />

        <LinearLayout
            android:id="@+id/llLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstrction">

            <EditText
                android:id="@+id/edLoginName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittaxt_bg"
                android:drawableEnd="@drawable/ic_check"
                android:fontFamily="@font/app_font"
                android:hint="@string/name"
                android:textAlignment="viewStart"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edLoginPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittaxt_bg"
                android:drawableEnd="@drawable/ic_check"
                android:fontFamily="@font/app_font"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


                <EditText
                    android:id="@+id/txtCountryView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:focusable="false"
                    android:background="@drawable/edittaxt_bg"
                    android:fontFamily="@font/app_font"
                    android:hint="@string/city"
                    android:inputType="phone"
                    android:padding="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/etxt_shape"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/app_font"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="33dp" />

            <TextView
                android:id="@+id/tvLoginSkip"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/app_font"
                android:text="@string/skip"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>