<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btnTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/app_font"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/contact"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#60707070"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/btnWhats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/app_font"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/whatsApp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#60707070"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/txtSendStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/app_font"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/SendingaMessage"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#60707070"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                    android:id="@+id/txtSEndMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/app_font"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/managementMessaging"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
