<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/imgVerifyLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:src="@drawable/logo_light_no_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstraction"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/app_font"
            android:text="@string/code_hint"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgVerifyLog" />

        <LinearLayout
            android:id="@+id/llVerificationForm"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInstraction">

            <com.poovam.pinedittextfield.SquarePinField
                android:id="@+id/squareField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layoutDirection="ltr"
                android:textColor="@color/colorPrimaryDark"
                android:textSelectHandle="@drawable/text_handle"
                android:textSize="24sp"
                app:cornerRadius="33dp"
                app:fieldBgColor="@color/white"
                app:highlightColor="@color/colorPrimaryDark"
                app:noOfFields="4"
                android:alpha="0.7" />

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/app_font"
                android:padding="16dp"
                android:text="@string/verify"
                android:background="@drawable/etxt_shape"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/resend_code"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llVerificationForm" />

        <TextView
            android:id="@+id/txtDownTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="05:00"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtResendCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtResendCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>